<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffe39a"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_weight="0.10"
            android:contentDescription=""
            app:srcCompat="@drawable/t5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/tvTitleEmail"
            android:textColor="#4b2000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logEtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/email"
            android:inputType="textNoSuggestions"
            android:textColor="#4b2000"
            android:textColorHint="#4b2000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/tvTitlePassword"
            android:textColor="#4b2000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logEtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textPassword"
            android:textColor="#4b2000"
            android:textColorHint="#4b2000" />

        <Button
            android:id="@+id/logLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttondesign"
            android:fontFamily="casual"
            android:shadowColor="#4b2000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/login"
            android:textColor="#4b2000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFF2D1"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>

