<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffe39a"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_weight="0.10"
                android:contentDescription=""
                app:srcCompat="@drawable/t5" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="casual"
                android:text="@string/gametitle"
                android:textColor="#4b2000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/accEtGameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="casual"
                android:text="@string/nolocation"
                android:textColor="#4b2000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/accSNoLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/spinnerNoLocation"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="casual"
                android:text="@string/time"
                android:textColor="#4b2000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/accSTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/spinnerTime"
                android:textSize="13sp" />

            <Button
                android:id="@+id/accCreateNextBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/buttondesign"
                android:shadowColor="#4b2000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/next"
                android:textColor="#4b2000"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFF2D1"
        app:menu="@menu/loginnavigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>

