<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffe39a"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvquestionNumEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="casual"
                android:paddingLeft="20dp"
                android:text="Question 1"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtQuestionEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/a"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtAnsAEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/b"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtAnsBEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/c"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtAnsCEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/d"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtAnsDEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingLeft="6dp"
                android:text="@string/hint"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/accEtHintEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/correctans"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/accCorrectAnswerRadiogrpEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <RadioButton
                    android:id="@+id/rbaEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="A"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbbEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="B"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbcEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="C"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbdEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="D"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/accGenQrEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttondesign"
            android:fontFamily="casual"
            android:shadowColor="#4b2000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/genqr"
            android:textColor="#4b2000"
            android:textSize="40sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/qrimageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/accSaveEdit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttondesign"
            android:fontFamily="casual"
            android:shadowColor="#4b2000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Save QR"
            android:textColor="#4b2000"
            android:textSize="40sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>


    </android.support.v4.widget.DrawerLayout>
